feat: Add join, login and logout